Add swagger documentation Issues #41 and #43: Adding unit tests for signup and login
